bug navabar-desktop

--- a/index.html
+++ b/index.html
@@ -12,17 +12,17 @@
 </head>
 <body class="font-Montserrat dark:bg-gray-900">
   <nav class="w-full h-14 hidden bg-white lg:flex p-4 justify-between fixed z-10 dark:bg-gray-800">
-    <div class="h-auto w-auto">
+    <div class="h-full w-1/5">
       <p class="text-xl text-primary font-bold  dark:text-white">Platzi Travel</p>
     </div>
-    <div class="flex space-x-8">
+    <div class="w-3/5 h-full flex space-x-8 justify-center">
       <a class="font-bold text-md text-primary dark:text-white" href="#home">Locations</a>
       <a class="font-bold text-md text-primary dark:text-white" href="#recomendados">Our Recomendations</a>
       <a class="font-bold text-md text-primary dark:text-white" href="#rentas_destacadas">Stays</a>
       <a class="font-bold text-md text-primary dark:text-white" href="#faqs">FAQS</a>
       <a class="font-bold text-md text-primary dark:text-white" href="#about_us">About Us</a>
     </div>
-    <div class="flex space-x-6 pr-8">
+    <div class="w-1/5 h-full flex space-x-6 justify-center">
       <svg xmlns="http://www.w3.org/2000/svg" className="h-5 w-5" viewBox="0 0 20 20" fill="currentColor">
         <path class="fill-current text-primary dark:text-white" fillRule="evenodd" d="M8 4a4 4 0 100 8 4 4 0 000-8zM2 8a6 6 0 1110.89 3.476l4.817 4.817a1 1 0 01-1.414 1.414l-4.816-4.816A6 6 0 012 8z" clipRule="evenodd"/>
       </svg>
