--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Montserrat&display=swap" rel="stylesheet">
-	<link rel="stylesheet" href="./public/css/tailwind.css">
+	<link rel="stylesheet" href="../public/css/tailwind.css">
   <title>PlatziTravel</title>
 </head>
 <body class="font-Montserrat dark:bg-gray-900">
@@ -170,10 +170,10 @@
       <p class="text-lg text-gray-300">Fallow Us</p>
       <div class="flex space-x-2">
         <a href="https://twitter.com/">
-          <img src="./public/svg/twitter 1.svg" alt="tiwtter">
+          <img src="./svg/twitter 1.svg" alt="tiwtter">
         </a>
         <a href="https://instagram.com/">
-          <img src="./public/svg/instagram 1.svg" alt="tiwtter">
+          <img src="./svg/instagram 1.svg" alt="tiwtter">
         </a>
       </div>
     </footer>
